--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -32,7 +32,6 @@
   justify-content: center;
   overflow: hidden;
   border-radius: 50%;
-  cursor: pointer;
   margin-left: 2rem;
 
   @media only screen and (max-width: 767px) {
@@ -43,10 +42,10 @@
 
 .navItems {
   font-family: $primary-font;
-  font-size: 1.2rem;
+  font-size: 1rem;
   margin: 0;
   padding: 0;
-  width: 7.375rem;
+  min-width: 7.375rem;
   display: flex;
   align-items: flex-end;
   justify-content: center;
@@ -65,10 +64,6 @@
     display: inline-block;
     padding: 0 2rem;
     transform: translateY(0);
-
-    a {
-      cursor: pointer;
-    }
   }
 
   @media only screen and (max-width: 767px) {
