--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -8,7 +8,7 @@
 }
 .heroWrapper {
   height: 100%;
-  background-color: rgb(241, 134, 134);
+  // background-color: rgb(241, 134, 134);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -17,7 +17,7 @@
   height: 100%;
   width: 50%;
   min-width: 30%;
-  background-color: rgb(211, 50, 50);
+  // background-color: rgb(211, 50, 50);
   display: flex;
   align-items: center;
   justify-content: left;
