--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -9,23 +9,16 @@
 .heroWrapper {
   height: 100%;
   // background-color: rgb(241, 134, 134);
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 .heroTyping {
-  height: 100%;
-  width: 50%;
-  min-width: 30%;
   // background-color: rgb(211, 50, 50);
   display: flex;
   align-items: center;
   justify-content: left;
   flex-direction: row;
-
-  @media only screen and (max-width: 767px) {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+  flex-wrap: wrap;
+  padding: 4.1rem;
+  font-size: 60px;
 }
