--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -10,7 +10,11 @@
   height: 100%;
   // background-color: rgb(241, 134, 134);
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 70% 1fr 1fr;
+
+  @media only screen and (max-width: 767px) {
+grid-template-columns: 1fr;
+  }
 }
 .heroTyping {
   // background-color: rgb(211, 50, 50);
@@ -21,4 +25,11 @@
   flex-wrap: wrap;
   padding: 4.1rem;
   font-size: 60px;
+
+  @media only screen and (max-width: 767px) {
+    justify-content: center;
+    text-align: center;
+    font-size: 40px;
+
+  }
 }
