--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -10,26 +10,28 @@
   height: 100%;
   // background-color: rgb(241, 134, 134);
   display: grid;
-  grid-template-columns: 70% 1fr 1fr;
-
-  @media only screen and (max-width: 767px) {
-grid-template-columns: 1fr;
-  }
+  grid-template-rows: 1fr 1fr;
 }
 .heroTyping {
   // background-color: rgb(211, 50, 50);
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
   align-items: center;
-  justify-content: left;
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: 4.1rem;
+  padding: 5rem;
+  font-family: "Oxygen", sans-serif;
   font-size: 60px;
-
+  justify-items: left;
   @media only screen and (max-width: 767px) {
-    justify-content: center;
-    text-align: center;
-    font-size: 40px;
+    justify-items: center;
+    font-size: 50px;
+  }
+}
 
+.subheading {
+  font-family: $secondary-font;
+  font-size: 40px;
+  @media only screen and (max-width: 767px) {
+    font-size: 30px;
   }
 }
