--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,1 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=PT+Serif:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@700&display=swap");
+
 $primary-font: "Open Sans", sans-serif;
+$secondary-font: "PT Serif", serif;
