--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,10 +1,19 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
 @import "colors";
+@import "fonts";
 @import "cursor";
 
 * {
   box-sizing: border-box;
   cursor: none;
+}
+
+a {
+  text-decoration: none;
+  color: $primary-color;
+
+  :active {
+    text-decoration: none;
+  }
 }
 
 html,
