--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -20,18 +20,18 @@
   align-items: center;
   padding: 5rem;
   font-family: "Oxygen", sans-serif;
-  font-size: 60px;
+  font-size: 50px;
   justify-items: left;
   @media only screen and (max-width: 767px) {
     justify-items: center;
-    font-size: 50px;
+    font-size: 40px;
   }
 }
 
 .subheading {
-  font-family: $secondary-font;
-  font-size: 40px;
+  font-family: $primary-font;
+  font-size: 30px;
   @media only screen and (max-width: 767px) {
-    font-size: 30px;
+    font-size: 20px;
   }
 }
