--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -30,7 +30,7 @@
 }
 
 .subheading {
-  font-family: $primary-font;
+  font-family: "Open Sans", sans-serif;
   font-size: 30px;
   @media only screen and (max-width: 767px) {
     font-size: 20px;
