--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -49,7 +49,7 @@
 }
 
 .navItems {
-  font-family: $primary-font;
+  font-family: "Open Sans", sans-serif;
   font-size: 1rem;
   margin: 0;
   padding: 0;
