--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,3 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=PT+Serif:ital@1&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@700&display=swap");
+@font-face {
+  font-family: "Open Sans";
+  src: url("/fonts/OpenSans-Light.ttf");
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "Oxygen";
+  src: url("/fonts/Oxygen-Bold.ttf");
+  font-weight: 700;
+}
