--- a/styles/_cursor.scss
+++ b/styles/_cursor.scss
@@ -46,4 +46,5 @@
   transition-duration: 100ms;
   -webkit-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
+  transform-origin: 100% 100%;
 }
