--- a/styles/global.scss
+++ b/styles/global.scss
@@ -38,3 +38,11 @@ body {
   align-content: center;
   justify-items: center;
 }
+
+#unselectable {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
