--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -10,3 +10,6 @@ $tertiary-color: rgb(225, 0, 255);
 // Dimensions
 $dot-size: 2px;
 $dot-space: 35px;
+
+//Hightlight
+$text-select: rgb(23, 32, 42);
